--- a/src/styles/my-work.css
+++ b/src/styles/my-work.css
@@ -6,9 +6,21 @@
 
 .my-work-container {
   display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(400px, 1fr));
+  grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
   gap: 40px;
   padding: 20px 0 20px 0;
+}
+
+@media (min-width: 1105px) {
+  .my-work-container {
+    grid-template-columns: repeat(auto-fill, minmax(400px, 1fr));
+  }
+}
+
+@media (max-width: 1104px) {
+  .my-work-container {
+    grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+  }
 }
 
 .my-work-content {
